[tool.poetry]
name = "algorithms_and_data_structures"
version = "0.0.0"
license = "MIT"
description = "Algorithms and data structures implemented in Python."
authors = ["JCPedroza <nemesis4go10@hotmail.com>"]
readme = "README.md"
homepage = "https://github.com/JCPedroza/algorithms-and-data-structures-py"
repository = "https://github.com/JCPedroza/algorithms-and-data-structures-py"

[tool.poetry.dependencies]
python = "^3.10"
pyclean = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pyright = "^1.1.359"
prospector = "^1.7.7"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
