[tool.poetry]
name = "algorithms_and_data_structures"
version = "0.0.0"
license = "MIT"
description = "Algorithms and data structures implemented in Python."
authors = ["JCPedroza <nemesis4go10@hotmail.com>"]
readme = "README.md"
homepage = "https://github.com/JCPedroza/algorithms-and-data-structures-py"
repository = "https://github.com/JCPedroza/algorithms-and-data-structures-py"

[tool.poetry.dependencies]
# core
python = "^3.10"
numpy = "^1.26.4"

# static type check
mypy = "^1.10"
pyright = "^1.1.359"

# lint & style
black = "^24.4.0"
flake8 = "^7.0.0"

# unit test
pytest = "^8.1.1"  # unit test

# remove bitcode
pyclean = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
